Version 0.9.5 9/12/2010
	This version focuses on porting SDFS to Windows. SDFS can now be mounted on Windows (tested with Windows 7). Dokan and Java 7(32 bit) 
	are required for Windows Support. Windows support is experimental and not well tested.
	
	Enhancements :
	* Windows (32bit) Support. 
	* New Command Line Interface for getting file statistics and creating snapshots. 
	
Version 0.9.4 8/27/2010
	This version focuses on enabling cloud based storage deduplication. The storage backend for the dedup storage engine has been rewritten to
	allow for cloud storage. Amazon S3 is the first storage provider that has been added but others will be added as requested. Basically all 
	data will be stored to the cloud storage provider and meta-data will sit on the local filesystem where the SDFS volume was mounted from.
	
	Enhancements :
	* Amazon S3 Storage enabled. This will allow users to store unique chunks to an S3 backend. 
	* AES 256 bit Encryption of data to cloud dedup storage engine. 
	* Compression for S3 cloud storage. 
	* Improved read performance through caching requests.
	
Version 0.9.3 8/15/2010
	Fixes
	* Fixed Verbose Logging. All logging is now outputted to log4j.
	* Fixed Nonempry dirs deleted by rmdir
	* Fixed extended attributes and dedupAll bit not being read from file meta-data
	
Version 0.9.2 5/2/2010
	Fixes	
	* Major Bug Fixed that removed data after time through garbage collection. All users should update to this release immediately.
	* Minor issue with copying attributes.
Version 0.9.1 4/24/2010
	Bug fixes and performance enhancements identified during testing on LVM volumes and NFS.
	Fixes :
	* Getting extended attributes that do not exist not exits as expected. This fix was needed for mounting of NFS mounted volumes
	Enhancements :
	* Caching of permissions improves performance for NFS writes.
	
Version 0.9.0 4/18/2010
	First Release of the 0.9.x tree. 0.9 will focus primarily of Volume Replication and bug fixes. SDFS has introduced a new 